modify on features

--- a/Features.html
+++ b/Features.html
@@ -44,7 +44,7 @@ body, html {
 </style>
 </head>
 <body>
-
+<h1>hello testing </h1>
 <button class="tablink" onclick="openPage('HighLights')"id="defaultOpen">HighLights</button>
 <button class="tablink" onclick="openPage('Features')" >Features</button>
 <button class="tablink" onclick="openPage('Cashless Hospital')">Cashless Hospital</button>
